<resources>
    <string name="app_name">Tugas1praktikum</string>
    <string name="universitas_trunojoyo">Universitas Trunojoyo</string>
    <string name="beranda">Beranda</string>
    <string name="aktivitas_kegiatan">Aktivitas Kegiatan</string>
    <string name="artikel">Artikel\n</string>
    <string name="news1">Terlalu Jago, Trunojoyo Juara Lagi</string>
    <string name="isi1">Universitas Trunojoyo berhasil meraih juara 1 dalam ajang perlombaan debat nasional yang diselenggarakan oleh...</string>
    <string name="news2">Terlalu Jago, Trunojoyo Juara Lagi</string>
    <string name="isi2">Universitas Trunojoyo berhasil meraih juara 1 dalam ajang perlombaan debat nasional yang diselenggarakan oleh...\n</string>
    <string name="news3">Terlalu Jago, Trunojoyo Juara Lagi</string>
    <string name="isi3">Universitas Trunojoyo berhasil meraih juara 1 dalam ajang perlombaan debat nasional yang diselenggarakan oleh...</string>
    <string name="utm">Universitas Trunojoyo</string>
    <string name="pp">Profile</string>
    <string name="utm2">Universitas Trunojoyo</string>
    <string name="pp1">Profile Singkat</string>
    <string name="pp3">Universitas Trunojoyo Madura atau UTM adalah perguruan tinggi negeri yang terletak di Kamal, Kabupaten Bangkalan, Jawa Timur, Pulau Madura, Indonesia. Universitas Trunojoyo Madura dahulu merupakan universitas swasta yang resmi menjadi perguruan tinggi negeri berdasarkan Keputusan Presiden tanggal 5 Juli 2001. Perguruan tinggi ini diresmikan pada tanggal 23 Juli 2001 oleh Presiden Abdurrahman Wahid. Universitas Trunojoyo Madura merupakan perguruan tinggi negeri ke-7 di Jawa Timur.</string>
</resources>